# backend-master/routes/insumos.js
@@ -3,20 +3,24 @@ const router = express.Router();
 const insumoController = require('../controllers/insumosController');
 const { verifyToken, isAdmin, isPanadero, isUser } = require('../middleware/auth');
 
-router.get('/', verifyToken, isPanadero,(req, res) =>{
-    insumoController.getInsumos(req,res);
-}); 
+router.get('/', verifyToken, isPanadero, (req, res) => {
+  insumoController.getInsumos(req, res);
+});
+
+router.get('/paginado', verifyToken, isAdmin, (req, res) => {
+    insumoController.getInsumosPaginado(req, res);
+  });
 
 router.get('/:id', insumoController.getInsumoById);
 
 router.post('/', verifyToken, isAdmin, (req, res) => {
-    insumoController.createInsumo(req, res);
+  insumoController.createInsumo(req, res);
 });
 
 router.put('/:id', insumoController.updateInsumo);
 
-router.delete('/:id', verifyToken, isAdmin,(req, res) => {
-    insumoController.deleteInsumo(req, res);
+router.delete('/:id', verifyToken, isAdmin, (req, res) => {
+  insumoController.deleteInsumo(req, res);
 });
 
 module.exports = router;
